# fast_enum_conversion

./: Cargo.toml  README.md  lib.rs
.github/workflows/: check.yml
macro/: Cargo.toml  lib.rs
tests/: test.rs
